--- a/action.yml
+++ b/action.yml
@@ -5,6 +5,9 @@ inputs:
     description: 'Path of package.json to audit (relative to project root)'
     required: true
     default: '/'
+  github_token: 
+    description: 'GitHub access token'
+    required: true
 outputs:
   audit-result:
     description: "NPM Audit result"
