--- a/action.yml
+++ b/action.yml
@@ -1,10 +1,10 @@
 name: 'NPM Audit Report'
 description: 'Run NPM audit and comment'
 inputs:
-  package-json-path:
+  package_json_path:
     description: 'Folder within which the package.json lives (relative to project root)'
     required: true
-    default: '/'
+    default: './'
   github_token: 
     description: 'GitHub access token'
     required: true
@@ -13,4 +13,4 @@ runs:
   using: 'docker'
   image: 'Dockerfile'
   args:
-    - ${{ inputs.package-json-path }}
+    - ${{ inputs.package_json_path }}
