--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node dist/main.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc --build tsconfig.json"
+    "build": "tsc --build tsconfig.json",
+    "lint": "eslint ."
   },
   "repository": {
     "type": "git",
@@ -19,7 +20,12 @@
   },
   "homepage": "https://github.com/wx-jayesh/actions-npm-audit-comment#readme",
   "devDependencies": {
-    "@types/node": "^14.14.33"
+    "@types/node": "^14.14.33",
+    "@typescript-eslint/eslint-plugin": "^4.18.0",
+    "@typescript-eslint/parser": "^4.15.2",
+    "eslint": "^7.21.0",
+    "eslint-plugin-import": "^2.22.1",
+    "typescript": "^4.2.2"
   },
   "dependencies": {
     "@actions/core": "^1.2.6",
