Add icon + color for package branding

--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,7 @@
 name: 'NPM Audit Report'
+branding:
+  icon: 'alert-circle'
+  color: 'orange'
 description: 'Audit the `package.json` of a project and make a comment on the associated PR to highlight any dependency issues'
 inputs:
   package_json_path:
